<resources>
    <string name="app_name">AI Food Recognition</string>
    <string name="hint_password">********</string>
    <string name="lb_password">Mật khẩu</string>
    <string name="lb_confirm_password">Xác nhận mật khẩu</string>
    <string name="hint_email">.@gmail.com</string>
    <string name="lb_email">Email</string>
    <string name="lb_sub_login">Vui lòng nhập thông tin đăng nhập.</string>
    <string name="lb_welcome">Chào mừng</string>
    <string name="lb_register">Đăng ký </string>
    <string name="lb_sub_register">Vui lòng nhập thông tin đăng ký.</string>
    <string name="ai_food">AI Food Recognition</string>
    <string name="follow_heart">Theo dõi sức khỏe của bạn</string>

    <string name="image_type">image/*</string>
    <string name="notify_full_name_is_required">Họ và tên là bắt buộc</string>
    <string name="notify_email_is_required">Email là bắt buộc</string>
    <string name="notify_password_is_required">Mật khẩu là bắt buộc</string>
    <string name="notify_password_do_not_match">Mật khẩu không trùng khớp</string>
</resources>