<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_60sdp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.24"
        app:srcCompat="@drawable/ic_splash" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_18pt_bold"
        android:includeFontPadding="false"
        android:text="@string/ai_food"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:fontFamily="@font/inter_18pt_bold"
        android:includeFontPadding="false"
        android:text="@string/lb_welcome"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <androidx.appcompat.widget.AppCompatTextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_18pt_regular"
        android:includeFontPadding="false"
        android:padding="@dimen/_2sdp"
        android:text="@string/lb_sub_login"
        android:textColor="#64748B"
        app:layout_constraintStart_toStartOf="@id/tvWelcome"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/inter_18pt_bold"
        android:text="@string/lb_email"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tvWelcome"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/bg_shape_white_corner_radius_10"
        android:fontFamily="@font/inter_18pt_regular"
        android:hint="@string/hint_email"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_10sdp"
        android:text="demo@gmail.com"
        android:textColor="@color/black"
        android:textColorHint="#94A3B8"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/inter_18pt_bold"
        android:text="@string/lb_password"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tvWelcome"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/bg_shape_white_corner_radius_10"
        android:fontFamily="@font/inter_18pt_regular"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/_10sdp"
        android:text="123456"
        android:textColor="@color/black"
        android:textColorHint="#94A3B8"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPassword" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cbSelected"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/inter_18pt_regular"
        android:includeFontPadding="false"
        android:text="Ghi nhớ tài khoản"
        android:textColor="#475569"
        app:buttonTint="#4BBE4F"
        app:layout_constraintStart_toStartOf="@id/edtPassword"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/inter_18pt_regular"
        android:text="Quên mật khẩu?"
        android:textColor="#3B82F6"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/bg_shape_corner_20"
        android:fontFamily="@font/inter_18pt_bold"
        android:includeFontPadding="false"
        android:text="ĐĂNG NHẬP"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbSelected" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/inter_18pt_light"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_6sdp"
        android:text="Hoặc Đăng ký tài khoản mới"
        android:textColor="#475569"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>