<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_100sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_100sdp"
                android:fontFamily="@font/inter_18pt_bold"
                android:includeFontPadding="false"
                android:text="@string/lb_register"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_18pt_regular"
                android:includeFontPadding="false"
                android:padding="@dimen/_2sdp"
                android:text="@string/lb_sub_register"
                android:textColor="#64748B"
                app:layout_constraintStart_toStartOf="@id/tvWelcome"
                app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/labelAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/inter_18pt_bold"
                android:text="Ảnh dại diện"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/tvWelcome"
                app:layout_constraintTop_toBottomOf="@id/tvSubWelcome" />

            <!-- Circular Avatar Picker Layout -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelAvatar">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardAvatar"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:visibility="gone"
                    app:cardBackgroundColor="#F1F5F9"
                    app:cardCornerRadius="@dimen/_76sdp"
                    app:cardElevation="@dimen/_1sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivAvatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/logo_ai_food" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardCameraBadge"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:visibility="gone"
                    app:cardBackgroundColor="#4BBE4F"
                    app:cardCornerRadius="@dimen/_24sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:layout_constraintBottom_toBottomOf="@id/cardAvatar"
                    app:layout_constraintEnd_toEndOf="@id/cardAvatar">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/_5sdp"
                        app:srcCompat="@drawable/outline_click_24"
                        app:tint="@color/white" />
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/inter_18pt_bold"
                android:text="Họ và tên"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/tvWelcome"
                app:layout_constraintTop_toBottomOf="@id/layoutAvatar" />

            <EditText
                android:id="@+id/edtFullName"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_shape_white_corner_radius_10"
                android:fontFamily="@font/inter_18pt_regular"
                android:hint="Nhập họ và tên của bạn"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="#94A3B8"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFullName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/inter_18pt_bold"
                android:text="@string/lb_email"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/tvWelcome"
                app:layout_constraintTop_toBottomOf="@id/edtFullName" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_shape_white_corner_radius_10"
                android:fontFamily="@font/inter_18pt_regular"
                android:hint="@string/hint_email"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="#94A3B8"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEmail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/inter_18pt_bold"
                android:text="@string/lb_password"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/tvWelcome"
                app:layout_constraintTop_toBottomOf="@id/edtEmail" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_shape_white_corner_radius_10"
                android:fontFamily="@font/inter_18pt_regular"
                android:hint="@string/hint_password"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="#94A3B8"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPassword" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/inter_18pt_bold"
                android:text="@string/lb_confirm_password"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/tvWelcome"
                app:layout_constraintTop_toBottomOf="@id/edtPassword" />

            <EditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_shape_white_corner_radius_10"
                android:fontFamily="@font/inter_18pt_regular"
                android:hint="@string/hint_password"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textColorHint="#94A3B8"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvConfirmPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/bg_shape_corner_20"
        android:fontFamily="@font/inter_18pt_bold"
        android:includeFontPadding="false"
        android:text="ĐĂNG NHẬP"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClose"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:padding="@dimen/_9sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/svg_close" />
</androidx.constraintlayout.widget.ConstraintLayout>